Fix unit toggle

--- a/index.html
+++ b/index.html
@@ -18,18 +18,16 @@
 	<div id= "wrapper">
 	
 	<div class= "header">
-		<h1 class= "city">Current Weather for </h1>
+		<h1 class= "heading">Current Weather</h1>
+    <p>in</p>
+    <h1 class= "city"></h1>
 	</div>
 
 	<div class= "main">
-		<p class= "weather-icon"><i class= "fa"></i></p>
-		<p class= "day"></p>
-		<h1 class = "temp"><a href ="#" id= "temp-unit">&#8451;</a></h1>
-		<ul class= "weather-info">
-			<li id= "precip">Precip: </li>
-			<li id= "hum">Humidity: </li>
-			<li id= "wind">Wind: </li>
-		</ul>
+    <i class= "weather-icon fa"></i>
+		<p class= "condition"></p>
+		<h1 class = "temp"></h1>
+    <button class="btn btn-responsive btn-info">Toggle °F/°C</button>
 	</div>
 	</div> <!--wrapper close-->
 
