--- a/index.html
+++ b/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html >
 <head>
+  <meta charset="UTF-8">
+  <title>WeatherApp</title>
     <meta charset="utf-8">
     <script src="https://use.fontawesome.com/3d943843e1.js"></script>
     <title>Local Weather</title>
-    <meta name="viewport" content="width= device-width, initial-scale= 1">
-    <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <script
-  src="https://code.jquery.com/jquery-3.1.1.min.js"
-  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-  crossorigin="anonymous"></script>
+    <meta name="viewport" content="width= device-width, initial-scale= 1">  
+<link https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.9/css/weather-icons.css/>
+  
+  <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
+
+      <link rel="stylesheet" href="css/style.css">
+
+  
 </head>
 
-<div class= "container-flexible text-center">
+<body>
+  <div class= "container-flexible text-center">
 <body>
 	<div id= "wrapper">
 	
@@ -35,8 +39,11 @@
 		<p>An app by <a href="http://www.jordaneddy.me">Jeddy</a></p>
 	</div>
 
-	
-<script type='text/javascript' src='javascript/script.js'></script>
 </body>
 </div>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
+
+    <script src="js/index.js"></script>
+
+</body>
 </html>
