--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html >
+<html>
 <head>
   <meta charset="UTF-8">
   <title>WeatherApp</title>
@@ -7,43 +7,31 @@
     <script src="https://use.fontawesome.com/3d943843e1.js"></script>
     <title>Local Weather</title>
     <meta name="viewport" content="width= device-width, initial-scale= 1">  
-<link https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.9/css/weather-icons.css/>
-  
-  <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
-
-      <link rel="stylesheet" href="css/style.css">
-
-  
+    <link https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.9/css/weather-icons.css />
+    <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css' />
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
   <div class= "container-flexible text-center">
-<body>
 	<div id= "wrapper">
-	
-	<div class= "header">
-		<h1 class= "heading">Current Weather</h1>
-    <p>in</p>
-    <h1 class= "city"></h1>
-	</div>
-
-	<div class= "main">
-    <i class= "weather-icon fa"></i>
-		<p class= "condition"></p>
-		<h1 class = "temp"></h1>
-    <button class="btn btn-responsive btn-info">Toggle °F/°C</button>
-	</div>
-	</div> <!--wrapper close-->
-
-	<div class= "footer">
-		<p>An app by <a href="http://www.jordaneddy.me">Jeddy</a></p>
-	</div>
-
-</body>
-</div>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
-
+		<div class= "header">
+			<h1 class= "heading">Current Weather</h1>
+    			<p>in</p>
+   			<h1 class= "city"></h1>
+		</div>
+		<div class= "main">
+    			<i class= "weather-icon fa"></i>
+			<p class= "condition"></p>
+			<h1 class = "temp"></h1>
+    			<button class="btn btn-responsive btn-info">Toggle °F/°C</button>
+		</div>
+      </div> <!--wrapper close-->
+      <div class= "footer">
+      	<p>An app by <a href="http://www.jordaneddy.me">Jeddy</a></p>
+      </div>
     <script src="js/index.js"></script>
-
+  </div>
 </body>
 </html>
