--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
     <link https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.9/css/weather-icons.css />
     <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css' />
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/stylesheet.css" />
 </head>
-
 <body>
   <div class= "container-flexible text-center">
 	<div id= "wrapper">
@@ -31,7 +30,7 @@
       <div class= "footer">
       	<p>An app by <a href="http://www.jordaneddy.me">Jeddy</a></p>
       </div>
-    <script src="js/index.js"></script>
   </div>
+  <script src="js/index.js"></script>
 </body>
 </html>
