--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
       	<p>An app by <a href="http://www.jordaneddy.me">Jeddy</a></p>
       </div>
   </div>
-  <script src="js/index.js"></script>
+  <script src="javascript/script.js"></script>
 </body>
 </html>
